--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <h1>Seja bem vindo!</h1>
         <p>Qual o seu estilo?</p>
     </header>
+
+    <main>
+        <section>
+            
+        </section>
+    </main>
     
 </body>
 </html>
