iniciei primeira seção

--- a/index.html
+++ b/index.html
@@ -25,8 +25,33 @@
     </header>
 
     <main>
-        <section>
-            
+        <section class="conteudo">
+            <div class="conteudo__titulo">
+                <h2 class="titulo">GDM GAMES</h2>
+            </div>
+            <div class="conteudo__card">
+                <div class="conteudo__card__lado-esquerdo">
+                    <h3 class="conteudo__card__lado-esquerdo__titulo">Jogos eletrônicos de computador!</h3>
+                    <p>Jogando online no Discord 7 dias na semana!</p>
+                    <a href="#"><img src="imagens/Discord 1.png" alt=""></a>
+                    <a href="#"><img src="imagens/Steam 1.png" alt=""></a>
+                    <a href="#"><img src="imagens/EpicGames 1.png" alt=""></a>
+                </div>
+                <div class="conteudo__card__lado-direito">
+                    <img src="imagens/GDM Games 1.png" alt="">
+                    <a href="#">
+                        <div>Saiba mais</div>
+                        <div></div>
+                    </a>
+                </div>
+            </div>
+
+            <p>Alguns jogos que jogamos:</p>
+            <div>
+                <a href="#"><img src="imagens/capaJogo1 1.png" alt=""></a>
+                <a href="#"><img src="imagens/capaJogo2 1.png" alt=""></a>
+                <a href="#"><img src="imagens/capaJogo7 1.png" alt=""></a>
+            </div>
         </section>
     </main>
     
