--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
             <div class="conteudo__card">
                 <div class="conteudo__card__lado-esquerdo">
                     <h3 class="conteudo__card__lado-esquerdo__titulo">Jogos eletrônicos de computador!</h3>
-                    <p>Jogando online no Discord 7 dias na semana!</p>
-                    <a href="#"><img src="imagens/Discord 1.png" alt=""></a>
-                    <a href="#"><img src="imagens/Steam 1.png" alt=""></a>
-                    <a href="#"><img src="imagens/EpicGames 1.png" alt=""></a>
+                    <p class="conteudo__card__texto">Jogando online no Discord 7 dias na semana!</p>
+                    <div class="conteudo__card__imagens"> 
+                        <a href="#"><img src="imagens/Discord 1.png" alt=""></a>
+                        <a href="#"><img src="imagens/Steam 1.png" alt=""></a>
+                        <a href="#"><img src="imagens/EpicGames 1.png" alt=""></a>
+                    </div>
                 </div>
                 <div class="conteudo__card__lado-direito">
                     <img src="imagens/GDM Games 1.png" alt="">
