--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                 </div>
                 <div class="conteudo__card__lado-direito">
                     <img src="imagens/GDM Games 1.png" alt="">
-                    <a href="#">
-                        <div>Saiba mais</div>
-                        <div></div>
+                    <a class="conteudo__card__lado-direito__linke" href="#">
+                        <div class="conteudo__card__lado-direito__botao">Saiba mais</div>
                     </a>
                 </div>
             </div>
