--- a/index.html
+++ b/index.html
@@ -47,11 +47,44 @@
                 </div>
             </div>
 
-            <p>Alguns jogos que jogamos:</p>
-            <div>
+            <p class="conteudo__texto">Alguns jogos que jogamos:</p>
+
+            <div class="conteudo__carrosel">
                 <a href="#"><img src="imagens/capaJogo1 1.png" alt=""></a>
                 <a href="#"><img src="imagens/capaJogo2 1.png" alt=""></a>
                 <a href="#"><img src="imagens/capaJogo7 1.png" alt=""></a>
+            </div>
+        </section>
+
+
+        <section class="conteudo">
+            <div class="conteudo__titulo">
+                <h2 class="titulo">GDM GAMES</h2>
+            </div>
+            <div class="conteudo__card">
+                <div class="conteudo__card__lado-esquerdo">
+                    <h3 class="conteudo__card__lado-esquerdo__titulo">Jogos eletrônicos de computador!</h3>
+                    <p class="conteudo__card__texto">Jogando online no Discord 7 dias na semana!</p>
+                    <div class="conteudo__card__imagens"> 
+                        <a href="#"><img src="imagens/Discord 1.png" alt=""></a>
+                        <a href="#"><img src="imagens/Steam 1.png" alt=""></a>
+                        <a href="#"><img src="imagens/EpicGames 1.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="conteudo__card__lado-direito">
+                    <img src="imagens/GDM Games 1.png" alt="">
+                    <a class="conteudo__card__lado-direito__linke" href="#">
+                        <div class="conteudo__card__lado-direito__botao">Saiba mais</div>
+                    </a>
+                </div>
+            </div>
+
+            <p class="conteudo__texto">Alguns jogos que jogamos:</p>
+
+            <div class="conteudo__carrosel">
+                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo1 1.png" alt=""></a>
+                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo2 1.png" alt=""></a>
+                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo7 1.png" alt=""></a>
             </div>
         </section>
     </main>
