--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <p class="conteudo__texto">Alguns jogos que jogamos:</p>
 
             <div class="conteudo__carrosel">
-                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo1 1.png" alt=""></a>
-                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo2 1.png" alt=""></a>
-                <a class="conteudo__carrosel__imagem" href="#"><img src="imagens/capaJogo7 1.png" alt=""></a>
+                <a href="#"><img class="conteudo__carrosel__imagem" src="imagens/capaJogo1 1.png" alt=""></a>
+                <a href="#"><img class="conteudo__carrosel__imagem" src="imagens/capaJogo2 1.png" alt=""></a>
+                <a href="#"><img class="conteudo__carrosel__imagem" src="imagens/capaJogo7 1.png" alt=""></a>
             </div>
         </section>
     </main>
