--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
         </section>
 
         <footer>
-
+            <img class="rodape__imagem" src="imagens/rodape 1.png" alt="">
             <div class="rodape">
                 <p class="rodape__texto">GRUPO GDM - Todos os direitos reservados</p>
                 <p class="rodape__texto">Desde 1900 e bolinha, jogando e dando risadas</p>
             </div>
+
         </footer>
     </main>
     
